--- a/Firmware/CubeIDE/Tp_MicroP.ioc
+++ b/Firmware/CubeIDE/Tp_MicroP.ioc
@@ -1,7 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+Mcu.CPN=STM32L021K4T6
 Mcu.Family=STM32L0
 Mcu.IP0=ADC
 Mcu.IP1=NVIC
@@ -32,15 +36,15 @@ Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L021K4Tx
-MxCube.Version=6.3.0
-MxDb.Version=DB.6.0.30
+MxCube.Version=6.7.0
+MxDb.Version=DB.6.0.70
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true
-NVIC.TIM21_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM21_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA0-CK_IN.Mode=Asynchronous
 PA0-CK_IN.Signal=USART2_RX
 PA1.Mode=IN1
@@ -80,12 +84,12 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L021K4Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_L0 V1.12.1
+ProjectManager.FirmwarePackage=STM32Cube FW_L0 V1.12.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -98,7 +102,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_USART2_UART_Init-USART2-false-LL-true,4-MX_ADC_Init-ADC-false-LL-true,5-MX_TIM2_Init-TIM2-false-LL-true,6-MX_SPI1_Init-SPI1-false-LL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_USART2_UART_Init-USART2-false-LL-true,4-MX_ADC_Init-ADC-false-LL-true,5-MX_TIM2_Init-TIM2-false-LL-true,6-MX_SPI1_Init-SPI1-false-LL-true,7-MX_TIM21_Init-TIM21-false-HAL-true
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
 RCC.APB1TimFreq_Value=32000000
@@ -141,10 +145,10 @@ SPI1.VirtualType=VM_MASTER
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-PWM Generation1 CH1,Period,Prescaler
 TIM2.Period=255
-TIM2.Prescaler=124
+TIM2.Prescaler=125
 TIM21.IPParameters=Period,Prescaler
 TIM21.Period=255
-TIM21.Prescaler=124
+TIM21.Prescaler=125
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
@@ -154,4 +158,3 @@ VP_TIM21_VS_ClockSourceINT.Signal=TIM21_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
-isbadioc=false
